--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Allura&family=Roboto:wght@400;500;700&display=swap');
 
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body {
     font-family:'Roboto', sans-serif;
     width: 100%;
@@ -7,17 +13,27 @@ body {
     overflow: hidden;
     background-color: #060606;
     color: #fefaf1;
+
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    position: relative;
+}
+link[rel="icon"] {
+    width: 96px;
+    height: 96px;
 }
 main {
     background-color: #24272c;
     padding: 2rem;
     min-width: 330px;
-    margin: 0 auto;
+    margin: 0 ;
     border-radius: 5px;
+
+    margin-bottom: 5rem;
 }
+
 #container-search-cep{
     font-family: 'Allura', cursive;
     display: flex;
@@ -27,8 +43,10 @@ main {
 
     margin-bottom: 2rem;
 }
-#search-cep #titulo {
+
+#titulo {
     font-size: 3rem;
+    margin-bottom: 1rem;
 }
 #searchCep{
     padding: 8px;
@@ -62,4 +80,26 @@ main {
     border-radius: 4px;
     margin-bottom: 10px;
     background-color: #abacad;
+}
+footer {
+    width: 100%;
+    text-align: center;
+    background-color: #24272c;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+footer p {
+    padding: 2rem;
+}
+footer a {
+    color: #68fe9a;
+}
+@media (max-width: 480px){
+    main{
+        padding: 1rem;
+    }
+    footer{
+        font-size: .9rem;
+    }
 }
